Safari365 Prod/src/objects/PaymentDiscountsForQuotation__mdt.object
<CustomObject>
    <description>This custom metadata type will be used in Quoation Payment Summary screen to calculate the discount.</description>
    <fields>
        <fullName>Day_Difference__c</fullName>
        <label>Day Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Currency__c</fullName>
        <label>Payment Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Payment Discount For Quotation</label>
    <pluralLabel>PaymentDiscountForQuotation</pluralLabel>
</CustomObject>